<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <include layout="@layout/layout_head_back_title"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2.0dip"
            android:layout_marginRight="2.0dip">
            <TableLayout
                android:id="@+id/MorePage_Follow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin_small_micro"
                android:layout_marginRight="@dimen/activity_vertical_margin_small_micro"
                android:paddingLeft="1.0dip"
                android:shrinkColumns="0"
                android:stretchColumns="0"
                >
            </TableLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0.83"
            android:orientation="vertical">
            <TextView
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="    尊敬的用户:感谢您对【AP考勤管理系统】的关注，如果您在使用过程中有任何意见和建议，请您填写下并告诉我们。"
                android:textColor="#FF1B1A1A"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_margin_150"
                android:layout_marginLeft="@dimen/activity_vertical_margin_small"
                android:layout_marginRight="@dimen/activity_vertical_margin_small"
                android:layout_marginTop="15dp"
                android:background="@drawable/item_selector"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:text="@string/f"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <RadioGroup
                    android:id="@+id/rg_feedback_type"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >
                    <RadioButton
                        android:id="@+id/rb_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/a"/>
                    <RadioButton
                        android:id="@+id/rb_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/b"/>
                    <RadioButton
                        android:id="@+id/rb_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/c"/>
                    <RadioButton
                        android:id="@+id/rb_d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/d"/>
                </RadioGroup>
            </LinearLayout>
            <EditText
                android:id="@+id/tv_advice"
                android:textColor="#212121"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="请输入您遇到的具体问题"
                android:maxLines="10"
                android:minLines="3"
                android:padding="@dimen/margin_medium"/>
            <Button
                android:id="@+id/btn_submit"
               android:textColor="#808080"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:text="提交建议" />
        </LinearLayout>
    </LinearLayout>

