<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/hint"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/item_selector">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:layout_weight="7"
                android:drawableLeft="@mipmap/about_us"
                android:drawablePadding="@dimen/activity_vertical_margin_small"
                android:gravity="center_vertical"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/about"
                android:textSize="20sp"
                />
            <ImageView
                android:id="@+id/image_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_arrow"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:background="@drawable/item_selector"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:layout_weight="7"
                android:drawableLeft="@mipmap/feeback"
                android:drawablePadding="@dimen/activity_vertical_margin_small"
                android:gravity="center_vertical"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/advice"
                android:textSize="20sp"
                />
            <ImageView
                android:id="@+id/image_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_arrow"
                />
        </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/item_selector"
        >

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_weight="7"
            android:drawableLeft="@mipmap/ic_refresh"
            android:drawablePadding="@dimen/activity_vertical_margin_small"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/refresh"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/tv_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_small"
            android:textColor="@color/txt_light_gray"
            android:text="版本号"
            android:textSize="20sp"
           />
       <!-- android:visibility="gone"-->
        <ImageView
            android:id="@+id/image_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_arrow"
            />
    </LinearLayout>

    <!--<Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="获取的该机的mac地址" />-->
</LinearLayout>
